--- a/kakaomap/css/map.css
+++ b/kakaomap/css/map.css
@@ -8,10 +8,63 @@ aside {width: 390px; height: 100%; background-color: #fff; position: fixed; top:
 
 #map {width: 100%; height: 100%;}
 
-header {height: 116px; background-color: #258fff;}
+header {height: 116px; background-color: #258fff; padding: 20px 20px 2px;}
+
+.title {display: flex; justify-content: space-between; align-items: flex-start; height: 48px; padding-top: 5px;}
+.title-text {margin: 0; font-weight: 400; color: white; line-height: 20px; font-size: 20px; cursor: pointer;}
+.fa-bars {color: #fff; font-size: 20px; padding: 1px 0; margin-right: 10px; cursor: pointer;}
+.map-text {margin: 0; font-size: 20px; font-weight: 700;}
+.check-location {color: #fff; display: flex; align-items: center;}
+.my-location-label {font-size: 11px; display: flex; align-items: center; margin-top: 5px; cursor: pointer;}
+#my-location + .my-location-label::before {display: inline-block; width: 10px; height: 10px; border-radius: 50%; content: ''; margin-right: 5px; border: 2px solid #ffffff90;}
+#my-location:checked + .my-location-label::before {display: inline-block; width: 10px; height: 10px; border-radius: 50%; content: '✓'; color: #258fff; margin-right: 5px; background-color: #fff; line-height: 13px; text-align: center; font-weight: 700; font-size: 12px;}
+#my-location {display: none;}
+
+.search {width: 100%; background-color: #fff; border-radius: 3px; height: 46px; display: flex; justify-content: space-between; align-items: center; overflow: hidden; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);}
+.search-input {border: none; outline: none; width: 80%; height: 100%; padding-left: 15px;}
+.search-input::-webkit-input-placeholder {color: #9e9e9e; font-weight: 500;}
+.fa-magnifying-glass {padding: 15px; font-size: 16px; color: #dbdbdb; cursor: pointer;}
 
 .menu {margin:0; padding:0 11px; height: 54px; background-color: #258fff; display: flex; justify-content: space-between; align-items: center; list-style: none;}
 .menu li {padding: 12px 9px;}
 
-.mainmenutab {text-decoration: none; color: #fff; text-align: center; padding: 4px 7px; width: 56px; height: 30px; display: inline-block;}
+.mainmenutab {text-decoration: none; color: #fff; text-align: center; padding: 7px 0 5px; width: 56px; height: 30px; display: inline-block;}
 .mainmenutab.tab-selected {background-color: #1467dd; border-radius: 4px; font-weight: 700;}
+
+.report-error {height: 84px; border-bottom: 1px solid #f0f0f0;}
+
+.info {height: 120.5px; border-bottom: 1px solid #f0f0f0; padding: 23px 0 19px 19px;}
+
+.title-around {margin:0; padding-left: 8px; font-size: 13px;}
+
+.list-around {list-style-type: none; margin: 0; padding: 0; padding-top: 8px; display: flex; justify-content: flex-start; align-items: center;}
+
+.button-around {border: none; width: 50px; height: 48px; background-color: inherit; display: flex; flex-direction: column; justify-content: space-between; align-items: center;}
+
+.button-icon {width: 30px; height: 30px; margin: 0 10px;border: 1px solid #f0f0f0; border-radius: 50%; overflow: hidden; display: flex; justify-content: center; align-items: center;}
+
+.button-icon i {color: #555555;}
+
+.button-title {font-size: 10px; color: #a0a0a0;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
