--- a/kakaomap/css/map.css
+++ b/kakaomap/css/map.css
@@ -31,23 +31,37 @@ header {height: 116px; background-color: #258fff; padding: 20px 20px 2px;}
 .mainmenutab {text-decoration: none; color: #fff; text-align: center; padding: 7px 0 5px; width: 56px; height: 30px; display: inline-block;}
 .mainmenutab.tab-selected {background-color: #1467dd; border-radius: 4px; font-weight: 700;}
 
-.report-error {height: 84px; border-bottom: 1px solid #f0f0f0;}
+.report-error {height: 84px; border-bottom: 1px solid #f0f0f0; padding: 25px 26px 0;}
+
+.ta_wrap {display: flex; justify-content: space-between; align-items: flex-start;}
+.ta_wrap .title-around1 {padding: 0; margin: 0; font-size: 15px; font-weight: bold;}
+.ta_wrap p {font-size: 12px; color: #999; padding: 0; margin: 0;}
+
+.info-location-weather {padding: 0; margin:0; padding-top: 2px; color: #444; font-size: 13px;}
+.temper {display: inline-block; padding: 0 0 0 6px; font-weight: bold; font-size: 14px; color: #000; vertical-align: top;}
+.txt_change {padding: 0 0 0 7px;}
+.txt_bar {display: inline-block; width: 1px; height: 10px; background-color: #e2e2e2; margin: 0 7px 0 8px;}
+.txt_dust {display: inline-block;}
+.txt_state {padding-left: 3px;}
+.txt_state.density1 {color: #006bee;}
+.txt_dust+.txt_dust {padding-left: 9px;}
 
 .info {height: 120.5px; border-bottom: 1px solid #f0f0f0; padding: 23px 0 19px 19px;}
 
-.title-around {margin:0; padding-left: 8px; font-size: 13px;}
+.title-around {margin:0; padding-left: 8px; font-size: 15px; font-weight: bold;}
 
 .list-around {list-style-type: none; margin: 0; padding: 0; padding-top: 8px; display: flex; justify-content: flex-start; align-items: center;}
 
-.button-around {border: none; width: 50px; height: 48px; background-color: inherit; display: flex; flex-direction: column; justify-content: space-between; align-items: center;}
+.button-around {border: none; width: 50px; height: 48px; background-color: inherit; display: flex; flex-direction: column; justify-content: space-between; align-items: center; cursor: pointer;}
 
 .button-icon {width: 30px; height: 30px; margin: 0 10px;border: 1px solid #f0f0f0; border-radius: 50%; overflow: hidden; display: flex; justify-content: center; align-items: center;}
+.button-icon:hover {background-color: #f0f0f0;}
 
 .button-icon i {color: #555555;}
 
 .button-title {font-size: 10px; color: #a0a0a0;}
-
-
+.toggle-button {position: absolute; right: -18px; display: flex; justify-content: center; align-items: center; padding: 0; top: 50%; transform: translateY(-50%); line-height: 0; width: 18px; height: 50px; border: none; background-color: #fff; color: #258fff; font-size: 10px; box-shadow: 2px 0 2px rgba(0, 0, 0, 0.2); border-top-right-radius: 3px; border-bottom-right-radius: 3px; cursor: pointer;}
+ 
 
 
 
