--- a/kakaomap/css/map.css
+++ b/kakaomap/css/map.css
@@ -4,6 +4,7 @@ html, body {margin: 0; width: 100%; height: 100%;}
 
 #container {width: 100%; height: 100%;}
 
+.invisible-aside {left: -390px;}
 aside {width: 390px; height: 100%; background-color: #fff; position: fixed; top: 0; left: 0; z-index: 10; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);}
 
 #map {width: 100%; height: 100%;}
@@ -20,9 +21,16 @@ header {height: 116px; background-color: #258fff; padding: 20px 20px 2px;}
 #my-location:checked + .my-location-label::before {display: inline-block; width: 10px; height: 10px; border-radius: 50%; content: '✓'; color: #258fff; margin-right: 5px; background-color: #fff; line-height: 13px; text-align: center; font-weight: 700; font-size: 12px;}
 #my-location {display: none;}
 
+.search-container {position: relative;}
 .search {width: 100%; background-color: #fff; border-radius: 3px; height: 46px; display: flex; justify-content: space-between; align-items: center; overflow: hidden; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);}
 .search-input {border: none; outline: none; width: 80%; height: 100%; padding-left: 15px;}
 .search-input::-webkit-input-placeholder {color: #9e9e9e; font-weight: 500;}
+.invisible-recent {display: none;}
+.search-recent {position: absolute; left: 0; top: 44px; background-color: #fff; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; width: 100%; overflow: hidden; border-top: 1px solid #f0f0f0;}
+.title-recent {display: flex; justify-content: center; align-items: center; height: 42px; padding: 18px 16px 8px; font-size: 12px; color: #555;}
+.list-recent {padding: 4px 0; margin: 0;}
+.favorite-recent {height: 32px; padding: 0 16px; background-color: #f0f0f0;}
+.button-recentoff {border: none; background-color: inherit; font-size: 11px; height: 100%; color: #555; cursor: pointer;}
 .fa-magnifying-glass {padding: 15px; font-size: 16px; color: #dbdbdb; cursor: pointer;}
 
 .menu {margin:0; padding:0 11px; height: 54px; background-color: #258fff; display: flex; justify-content: space-between; align-items: center; list-style: none;}
@@ -30,6 +38,8 @@ header {height: 116px; background-color: #258fff; padding: 20px 20px 2px;}
 
 .mainmenutab {text-decoration: none; color: #fff; text-align: center; padding: 7px 0 5px; width: 56px; height: 30px; display: inline-block;}
 .mainmenutab.tab-selected {background-color: #1467dd; border-radius: 4px; font-weight: 700;}
+
+.invisible-body {display: none;}
 
 .report-error {height: 84px; border-bottom: 1px solid #f0f0f0; padding: 25px 26px 0;}
 
